crates/reinhardt-pages/tests/ui/form_values/fail/enum.rs
use reinhardt_pages::FormValues;

#[derive(Clone, PartialEq, FormValues)]
enum BadFormValues {
	Choice(String),
}

fn main() {}
