crates/reinhardt-pages/tests/ui/form_values/fail/enum.stderr
error: FormValues can only be derived for structs with named fields
 --> tests/ui/form_values/fail/enum.rs:4:6
  |
4 | enum BadFormValues {
  |      ^^^^^^^^^^^^^
